# screenshot-pipeline

./: .env.example  .gitignore  README.md
.claude/: settings.local.json
screenshot-pipeline/: README.md  pyproject.toml
screenshot-pipeline/pipeline/: assets.py  definitions.py  watcher.py
screenshot_analytics/: dbt_project.yml
screenshot_analytics/models/: stg_enriched_screenshots.sql  topics_by_count.sql  topics_by_week.sql
terraform/: .terraform.lock.hcl  main.tf
